<resources>
    <string name="app_name">Ant Colony App</string>
    <string name="people_details">People Details</string>
    <string name="add_people">Add People</string>

    <string name="hint_name">Name</string>
    <string name="hint_met_at">Met at</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_email">Email</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>

    <string name="people_id">PEOPLE_ID</string>

    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="title_activity_add_people">AddPeopleActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_created">Your account has been created. You can now log in</string>
    <string name="sign_in">Sign In</string>
    <string name="i_agree_to">   I agree to the </string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signIn">Sign In</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="one_thing">ONE THING</string>
    <string name="whats_on_your_mind">Whats on your mind?</string>
    <string name="u2713">✓</string>
    <string name="facebook_app_id">2702080979879876</string>
    <string name="fb_login_protocol_scheme">fb2702080979879876</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="invalid_email_format">Email format is invalid.</string>
    <string name="password_too_short">Password too short.</string>
</resources>
