<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/signInFragment">


    <EditText
            android:id="@+id/usernameLoginEditText"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/passwordLoginEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameLoginEditText" />

    <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#222121"
            android:text="@string/signIn"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLoginEditText" />

    <TextView
            android:id="@+id/orTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <View
            android:id="@+id/leftDividerLine"
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="25dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <View
            android:id="@+id/rightDividerline"
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/leftDividerLine"
            android:background="@mipmap/facebook" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginRight="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/rightDividerline"
            app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                app:srcCompat="@mipmap/mask"
                android:layout_alignParentBottom="true" />

        <TextView
                android:id="@+id/toSignUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="25dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="#FFFFFF"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signUpTextView"
                android:layout_toRightOf="@id/toSignUpTextView"
                android:layout_toEndOf="@+id/toSignUpTextView"
                android:text="@string/sign_up"
                android:layout_alignParentBottom="true"
                android:paddingBottom="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

